# horas-registro-civil

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/actions/dockerize/: action.yaml
.github/workflows/: deploy.yaml
src/api/: main.py
src/api/routers/: slots.py
src/schemas/: slots.py
src/services/: settings.py
src/services/srcei/: client.py  config.py  recommender.py
tests/: test_slots.py
